added downgrade to working version of wpa_supplicant for macbook

--- a/files/home/.config/libinput-gestures.conf
+++ b/files/home/.config/libinput-gestures.conf
@@ -66,11 +66,11 @@ gesture swipe down	3 xdotool key alt+Down
 # gesture swipe down	xdotool key super+Page_Up
 
 # Browser go forward (works only for Xorg, and Xwayland clients)
-gesture swipe left	3 xdotool key alt+Left
+gesture swipe left	3 xdotool key alt+Right
 #gesture swipe left	3 xdotool key End
 
 # Browser go back (works only for Xorg, and Xwayland clients)
-gesture swipe right	3 xdotool key alt+Right
+gesture swipe right	3 xdotool key alt+Left
 #gesture swipe right	3 xdotool key Home
 
 # NOTE: If you don't use "natural" scrolling direction for your touchpad
